# Custom_Interface

./: CMakeLists.txt  main.cpp
.github/workflows/: releasy.yml
include/: Point.h
include/Commands/: MoveCommand.h  RotateCommand.h
include/Interfaces/: ICommand.h  IMovingObject.h  IRotatingObject.h
src/Commands/: MoveCommand.cpp  RotateCommand.cpp
tests/: test_main.cpp
